<resources>
    <string name="app_name">Examen01</string>

    <string name="titulo">Datos Generales del Producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="codigo">Codigo</string>
    <string name="categoria">Categoria</string>
    <string name="minimo">Minimo</string>
    <string name="maximo">Maximo</string>
    <string name="descontinuado">Descontinuado</string>

    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="aceptar">Aceptar</string>

    <string name="registrado">Producto registrado</string>
    <string name="obligatorio">Todos los campos son obligatorios</string>
    <string name="mayorACero">Los campos numéricos deben ser mayores a cero</string>




</resources>